DesktopApp UI and some controllers